# swagger.json
@@ -410,16 +410,6 @@
             }
           }
         ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdatePropertyDto"
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
             "description": ""
@@ -796,10 +786,6 @@
           "description",
           "location"
         ]
-      },
-      "UpdatePropertyDto": {
-        "type": "object",
-        "properties": {}
       }
     }
   }
